--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <html>
   <head>
-    <title>Meu grafico</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="./main.js" ></script>
-    <script src="./jquery-3.5.1.min.js"></script>
+    <title>Gráficos</title>
   </head>
   <body>
-    <div class="grafico-linear-container">
-      <div class="grafico-linear"></div>
-      <div class="grafico-linear-legenda"></div>
-    </div>
+      
   </body>
 </html> 
