--- a/Edicao/Quadrante/index.html
+++ b/Edicao/Quadrante/index.html
@@ -1,15 +1,11 @@
 <html>
   <head>
-    <title>Meu grafico</title>
+    <title>Gráfico quadrante - Edição</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="./main.js" ></script>
     <script src="./jquery-3.5.1.min.js"></script>
   </head>
   <body>
-      <div class="grafico-linear-container">
-          <div class="grafico-linear"></div>
-      </div>
-      <br /><br /><br /><br /><br />
       <div class="grafico-quadrante-container">
           <div class="grafico-quadrante"></div>
       </div>
