Finalizando gráficos de visualização - (Bolinhas cortando)

--- a/Visualizacao/Quadrante/index.html
+++ b/Visualizacao/Quadrante/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-      <title>Gráfico linear - Visualização</title>
+    <title>Gráfico quadrante - Visualização</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="./main.js" ></script>
     <script src="./jquery-3.5.1.min.js"></script>
   </head>
   <body>
-      <div class="grafico-linear-container">
-          <div class="grafico-linear"></div>
+      <div class="grafico-quadrante-container">
+          <div class="grafico-quadrante"></div>
       </div>
   </body>
 </html> 
